# agv_bridge_node

./: README.md  test.json
src/agv_bridge_v2/: CMakeLists.txt  package.xml
src/agv_bridge_v2/include/agv_bridge_v2/: AgvBridgeNode.hpp  HttpApiClient.hpp  LocalizationMonitor.hpp  NavigationManager.hpp  RobotPoseProvider.hpp  websocket_server.h  websocket_server.hpp
src/agv_bridge_v2/include/agv_bridge_v2/bean/: BaseMessage.hpp  CommandAck.hpp  Edge.hpp  LaserScan.hpp  MoveToMessage.hpp  PathPoint.hpp  PositionUpdate.hpp  StatusUpdate.hpp
src/agv_bridge_v2/include/agv_bridge_v2/utils/: TransformUtils.hpp
src/agv_bridge_v2/launch/: agv_bridge_v2.launch.py
src/agv_bridge_v2/src/: AgvBridgeNode.cpp  HttpApiClient.cpp  LocalizationMonitor.cpp  NavigationManager.cpp  RobotPoseProvider.cpp  TransformUtils.cpp  main.cpp  websocket_server.cpp
src/agv_bridge_v2/src/bean/: BaseMessage.cpp  CommandAck.cpp  Edge.cpp  LaserScan.cpp  MoveToMessage.cpp  PositionUpdate.cpp  StatusUpdate.cpp
